test/error/parser/struct-static-after-field.dsk
let S = struct
    x: int
    let y = 1
end
